# polyword

./: .gitignore  build_windows.ps1  polyword.spec  pyproject.toml
polyword/: api.py  desktop_app.py  launcher.py  main.py  processor.py  windows_launcher.py
polyword/services/: chatgpt.py  ocr.py  storage.py  translate.py
polyword/static/: app.js  index.html  styles.css
